# crnn_libtorch

./: CMakeLists.txt  CrnnDeploy.cpp  CrnnDeploy.h  readme.md
crnn_convert/: convert.py
crnn_convert/model/: keys.py
src/: keys.txt
